# meterreader

./: CMakeLists.txt  README.md
Code/inc/: meterreader_version.h.in
Code/src/: meterreader.c
